# ics-fusion

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config-sample.txt  requirements.txt
app/: server.py
app/tools/: caching.py  tools.py
resources/test/: belgium.ics
src/: caching.rs  config.rs  fetcher.rs  lib.rs
