[package]
name = "ics-fusion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.91"
url = "2.3.1"
reqwest = { version = "0.11.13", features = ["blocking"] }
icalendar = "0.15.1"
sha2 = "0.10.6"
chrono = "0.4.23"
rusqlite = { version = "0.28.0", features = ["bundled"] }
env_logger = "0.10.0"
log = "0.4.17"